# movie_classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
data/processed/: Y.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: EDA.ipynb
src/: main.py
src/data/: downloads3.py  loader_s3.py
src/features/: data_clean.py  load_rating.py
src/models/: metrics_model.py  predict_model.py  train_model.py
src/models/models/: movie_classifier.pkl
src/visualization/: pipeline.py
